# korean-maritime-law-rag

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: demo.yaml  laws.yaml
docs/: api-notes.md  architecture.md
reports/: agent_eval.json  agent_eval.md  corpus_profile.json  corpus_profile.md  cost.json  cost.md  embedder_ablation.json  embedder_ablation.md  faithfulness_eval.json  latency.json  ragas_eval.json  ragas_eval.md  significance.md
scripts/: ablation_embeddings.py  ask.py  build_index.py  capture_demo_traces.py  collect.py  embed_corpus.py  evaluate.py  evaluate_all.py  extract_gold_chains.py  measure_cost.py  poll_amendments.py  profile_corpus.py  ragas_score.py  search.py  significance.py  smoke.py  validate_gold.py
tests/: conftest.py  qa_pairs.yaml  test_ablation.py  test_agent_eval.py  test_agent_graph.py  test_agent_state.py  test_citation.py  test_classifier.py  test_collector.py  test_config.py  test_corpus.py  test_cost.py  test_crossref.py  test_diagnostics.py  test_embedder.py  test_embedder_factory.py  test_embedding_cache.py  test_faithfulness.py  test_fusion.py  test_generator.py  test_gold_chains.py  test_goldset.py  test_graph.py  test_graph_edges.py  test_harness.py  test_latency.py  test_lexical.py  test_live.py  test_llm.py  test_models.py  test_observability.py  test_parser.py  test_ragas_eval.py  test_reranker.py  test_retriever.py  test_router.py  test_serving.py  test_significance.py  test_vector.py  test_verify.py
web/: README.md  next.config.ts
web/app/: globals.css  (+2 more)
(+163 files in other folders)
